test ecriture de fichier

--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
   <div id="bouton">
     <button onclick="startCapture()">Start</button>
   </div>
+  <button id="test">Test</button>
 
   <script src="js/record.js"></script>
+  <script src="js/test.js"></script>
   <p id="test1"></p>
   <p id="test2"></p>
 </body>
