--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Accueil</title>
   <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>-->
   <script src="jquery-3.3.1.js"></script>
+  <script src="js/login.js"></script>
 </head>
 
 <body>
@@ -20,6 +21,7 @@
   <button id="test">Test</button>
 
   <script src="js/record.js"></script>
+  <script src="js/show.js"></script>
   <p id="test1"></p>
   <p id="test2"></p>
 </body>
