--- a/index.html
+++ b/index.html
@@ -4,25 +4,29 @@
 <head>
   <meta charset="UTF-8">
   <title>Accueil</title>
-  <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>-->
-  <script src="jquery-3.3.1.js"></script>
-  <script src="js/login.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <!--<script src="jquery-3.3.1.js"></script>-->
 </head>
 
 <body>
   <nav>
-    <a href="#">Log in/Sign in</a>
-    <a href="#">Browse</a>
-    <a href="#">My Profile</a>
+    <button class="navigation" id="in" onclick="login()">Log in/Sign in</button>
+    <button class="navigation" id="out">Log out</button>
+    <button class="navigation">Browse</button>
+    <button class="navigation">My Profile</button>
   </nav>
-  <div id="bouton">
-    <button onclick="startCapture()">Start</button>
+  <div id="capture">
+    <button id="button" onclick="startCapture()">Start</button>
   </div>
 
   <script src="js/record.js"></script>
   <script src="js/show.js"></script>
+  <script src="js/login.js"></script>
+  <!--
   <p id="test1"></p>
   <p id="test2"></p>
+  -->
 </body>
 
 </html>
