hide/show buttons

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <nav>
     <button class="navigation" id="in" onclick="login()">Log in/Sign in</button>
-    <button class="navigation" id="out">Log out</button>
+    <button class="navigation" id="out" onclick="logout()">Log out</button>
     <button class="navigation">Browse</button>
     <button class="navigation">My Profile</button>
   </nav>
@@ -22,7 +22,7 @@
 
   <script src="js/record.js"></script>
   <script src="js/show.js"></script>
-  <script src="js/login.js"></script>
+  <script src="js/logging.js"></script>
   <!--
   <p id="test1"></p>
   <p id="test2"></p>
