--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <nav>
     <button class="navigation" id="in" onclick="navLogin()">Log in/Sign in</button>
     <button class="navigation" id="out" onclick="navLogout()">Log out</button>
-    <button class="navigation" id="record">Record</button>
-    <button class="navigation" id="browse">Browse</button>
-    <button class="navigation" id="mp">My Profile</button>
+    <button class="navigation" id="record" onclick="navRecord()">Record</button>
+    <button class="navigation" id="browse" onclick="navBrowse()">Browse</button>
+    <button class="navigation" id="mp" onclick="navProfile()">My Profile</button>
   </nav>
   <div id="main">
     <button id="button" onclick="startCapture()">Start</button>
