replace DOM with jQuery

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </nav>
   <div id="main">
     <button id="button" onclick="startCapture()">Start</button>
-    
+    <p id="text"></p>
   </div>
   <script src="js/record.js"></script>
   <script src="js/show.js"></script>
