affichage dossier perso + trucs

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <p id="text"></p>
   </div>
   <script src="js/record.js"></script>
-  <script src="js/show.js"></script>
+  <script src="js/showgael.js"></script>
   <script src="js/nav.js"></script>
 
   <p id="test1"></p>
